# pyFileHash

./: .gitignore  CHANGELOG.md  README.md  build.py  pyproject.toml
.github/workflows/: release.yml
file_hasher/src/: hasher.cpp
tests/: conftest.py  test_c_hashes.py  test_hashes.py  test_multiproc.py
