[tool.poetry]
name = "pyfilehash"
version = "0.1.0"
description = "Python Linkage to C File Hashing"
authors = ["Nathan Hui <nthui@ucsd.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pybind11 = "^2.11.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"
autopep8 = "^2.0.4"
coverage = "^7.3.2"
ipython = "^8.18.1"
pytest-cases = "^3.8.1"

[build-system]
requires = ["poetry-core", "pybind11", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true
